--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             <div class="discription">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate et consequatur, error impedit praesentium nostrum totam, in quibusdam quisquam, optio similique quo labore tenetur porro inventore nesciunt? Pariatur, in. Accusamus!</p>
                 <button>go</button>
+                <a href="Day1/index.html"> Day 1</a>
+                <a href="Day2/index.html">Day 2</a>
+                <a href="Day3/day3.html"> Day 3 </a>
             </div>
         </div>
     </div>
